--- a/css/main.css
+++ b/css/main.css
@@ -483,7 +483,7 @@ h3{
 .telecharger{
     background-color: #fff;
     border-radius: 50%;
-    cursor: gallery;
+    cursor: pointer;
 }
 @media (max-width:768px){
     .design .image  {
