--- a/css/main.css
+++ b/css/main.css
@@ -546,13 +546,20 @@ h3{
     background-color: var(--main-color);
     color: white;
 }
+.diagramme__titre{
+    position: absolute;
+    display: block;
+}
 .portfolio .gallery{
     display: flex;
+    justify-content: space-around;
     flex-wrap: wrap;
     width: 100%;
+    padding-bottom: 6rem;
+    position: relative;
 }
 .portfolio .gallery .img {
-    width: 25%;
+    width: 35%;
     overflow: hidden;
     position: relative;
 }
